# blender-mcp

./: README.md  pyproject.toml
src/blender_mcp/: blender.py  server.py
