[project]
name = "blender-mcp"
version = "0.1.0"
description = "MCP server for Blender"
readme = "README.md"
authors = [{ name = "Andrew Wason", email = "rectalogic@rectalogic.com" }]
requires-python = ">=3.11"
dependencies = ["anyio>=4.9.0", "click>=8.1.8", "mcp>=1.5.0"]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.11.2"]


[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # pyupgrade
    "UP",
]

[tool.mypy]
disallow_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
no_implicit_optional = true
show_error_codes = true
files = "src/**/*.py"
